Add interactive progress bar for skills

--- a/index.html
+++ b/index.html
@@ -56,41 +56,33 @@
                     <h2 class="display-4 m-4 text-center" id="about">About</h2>
                     <div class="card mb-3 bg-secondary text-light">
                         <div class="row g-0">
-                            <div class="col-md-4">
+                            <div class="col-md-4 d-flex align-items-center">
                                 <img src="./Images/me.jpg" class="img-fluid rounded-start" alt="Me">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
                                     <h4 class="card-title">Hello</h4>
-                                    <h5 class="card-title">I am Ahmed Samir</h5>
+                                    <h5 class="card-title">My Name is Ahmed Samir</h5>
                                     <p class="card-text">I am Working as a Junoir Front-End Developer.</p>
                                 </div>
-                                <!-- <div class="card-body">
-                                    <div class="dropdown">
-                                        <button class="btn btn-success dropdown-toggle bg-dark text-success" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                            Skills
-                                        </button>
-                                        <ul class="dropdown-menu bg-dark">
-                                            <li><a class="dropdown-item text-success" href="#">HTML</a></li>
-                                            <li><a class="dropdown-item text-success" href="#">CSS</a></li>
-                                            <li><a class="dropdown-item text-success" href="#">BootStrap</a></li>
-                                        </ul>
-                                    </div>
-                                </div> -->
                                 <div class="card-body">
                                     <h5 class="card-title">Skills...</h5>
                                     <div class="container mt-4">
                                         <h6>HTML</h6>
                                         <div class="progress mb-3">
-                                            <div class="progress-bar bg-success" role="progressbar" style="width: 98%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">98%</div>
+                                            <div class="progress-bar progress-bar-striped html" id="progressBar" role="progressbar" style="width: 0%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">98%</div>
                                         </div>
                                         <h6>CSS</h6>
                                         <div class="progress mb-3">
-                                            <div class="progress-bar bg-success" role="progressbar" style="width: 90%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">90%</div>
+                                            <div class="progress-bar progress-bar-striped css" id="progressBar" role="progressbar" style="width: 0%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">90%</div>
                                         </div>
                                         <h6>BootStrap</h6>
                                         <div class="progress mb-3">
-                                            <div class="progress-bar bg-success" role="progressbar" style="width: 100%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">100%</div>
+                                            <div class="progress-bar progress-bar-striped bootstrap" id="progressBar" role="progressbar" style="width: 0%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">100%</div>
+                                        </div>
+                                        <h6>JavaScript</h6>
+                                        <div class="progress mb-3">
+                                            <div class="progress-bar progress-bar-striped js" id="progressBar" role="progressbar" style="width: 0%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">65%</div>
                                         </div>
                                     </div>
                                 </div>
@@ -104,6 +96,7 @@
     </main>
     <!-- End main -->
     <script src="./JS/main.js"></script>
+    <script src="./JS/progress-bar.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
