--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link text-success active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link text-success active" aria-current="page" href="#home">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-success" href="#about">About</a>
@@ -42,7 +42,7 @@
                 </div>
             </div>
         </nav>
-        <div class="text-center">
+        <div class="text-center" id="home">
             <img src="./Images/339374.png" class="image" id="myImage" alt="Sample Image">
         </div>
     </header>
@@ -66,7 +66,7 @@
                                     <p class="card-text">I am Working as a Junoir Front-End Developer.</p>
                                 </div>
                                 <div class="card-body">
-                                    <h5 class="card-title">Skills...</h5>
+                                    <h5 class="card-title"> My Skills...</h5>
                                     <div class="container mt-4">
                                         <h6>HTML</h6>
                                         <div class="progress mb-3">
@@ -92,6 +92,48 @@
                 </div>
             </section>
             <!-- End Apout -->
+            <!-- Start My Portfolio -->
+            <section class="myPortfolio m-4">
+                <div class="container">
+                    <h2 class="display-4 m-4 text-center" id="about">My Portfolio</h2>
+                    <div id="carouselExampleCaptions" class="carousel slide">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                            <img src="./Images/MyBlog.png" class="d-block w-100" alt="MyBlog">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>My Blog</h5>
+                            </div>
+                            </div>
+                            <div class="carousel-item">
+                            <img src="./Images/EadgeCut.png" class="d-block w-100" alt="EadgeCut">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="text-dark">EadgeCut</h5>
+                            </div>
+                            </div>
+                            <div class="carousel-item">
+                            <img src="./Images/ParaRuz.png" class="d-block w-100" alt="ParaRuz">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>ParaRuz</h5>
+                            </div>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                        </div>
+                </div>
+            </section>
+            <!-- End My Portfolio -->
         </div>
     </main>
     <!-- End main -->
