--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-dark">
             <div class="container-fluid">
-                <a class="navbar-brand text-light" href="#">myPortfolio</a>
+                <a class="navbar-brand text-light" href="./index.html">myPortfolio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -24,6 +24,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-light" href="#about">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#skills">Skills</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -94,33 +97,47 @@
             </section>
             <!-- End Apout -->
 
-             <!-- Start Skills Section -->
-             <section class="skills">
+            <!-- Start Skills Section -->
+            <section class="skills" id="skills">
                 <div class="container">
-                    <div class="card-body">
-                        <h2 class="display-4 m-4 text-center"> My Skills</h5>
-                        <div class="container mt-4">
-                            <h6>HTML</h6>
-                            <div class="progress mb-3">
-                                <div class="progress-bar progress-bar-striped html" id="progressBar" role="progressbar" style="width: 0%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">98%</div>
+                    <h2 class="display-4 m-4 text-center"> My Skills</h2>
+                    <div class="row">
+                        <div class="col-lg-6 col-md-12">
+                            <div class="card-body">
+                                <h3>Hard Skills</h3>
+                                <div class="container mt-4">
+                                    <h6>HTML</h6>
+                                    <div class="progress mb-3">
+                                        <div class="progress-bar progress-bar-striped html" id="progressBar" role="progressbar" style="width: 0%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">98%</div>
+                                    </div>
+                                    <h6>CSS</h6>
+                                    <div class="progress mb-3">
+                                        <div class="progress-bar progress-bar-striped css" id="progressBar" role="progressbar" style="width: 0%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">90%</div>
+                                    </div>
+                                    <h6>BootStrap</h6>
+                                    <div class="progress mb-3">
+                                        <div class="progress-bar progress-bar-striped bootstrap" id="progressBar" role="progressbar" style="width: 0%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">100%</div>
+                                    </div>
+                                    <h6>JavaScript</h6>
+                                    <div class="progress mb-3">
+                                        <div class="progress-bar progress-bar-striped js" id="progressBar" role="progressbar" style="width: 0%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+                                    </div>
+                                </div>
                             </div>
-                            <h6>CSS</h6>
-                            <div class="progress mb-3">
-                                <div class="progress-bar progress-bar-striped css" id="progressBar" role="progressbar" style="width: 0%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">90%</div>
-                            </div>
-                            <h6>BootStrap</h6>
-                            <div class="progress mb-3">
-                                <div class="progress-bar progress-bar-striped bootstrap" id="progressBar" role="progressbar" style="width: 0%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">100%</div>
-                            </div>
-                            <h6>JavaScript</h6>
-                            <div class="progress mb-3">
-                                <div class="progress-bar progress-bar-striped js" id="progressBar" role="progressbar" style="width: 0%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
-                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-12 soft-skills">
+                            <h3>Soft Skills</h3>
+                            <ul>
+                                <li>Communication Skills</li>
+                                <li>Team Managment</li>
+                                <li>Problem Solving</li>
+                                <li>quick Learner</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
-             </section>
-             <!-- End Skills Section -->
+            </section>
+            <!-- End Skills Section -->
 
             <!-- Start My Portfolio -->
             <section class="myPortfolio m-4" id="Projects">
@@ -167,7 +184,8 @@
             <!-- Start Contact-Us Section -->
             <section class="connect-us mt-4">
                 <div class="container">
-                    <form action="contact.php" method="POST">
+                    <h2 class="display-4 m-4 text-center" id="contact">Contact-Me</h2>
+                    <form action="./PHP/contact.php" method="POST">
                         <div class="mb-3">
                             <label for="name" class="form-label">Your Name</label>
                             <input type="text" class="form-control" id="name" name="name" required>
@@ -277,7 +295,7 @@
     
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: black;">
-            © 2024 Copyright: Ahmed Samir
+            © <span id="Year"></span> Copyright: Ahmed Samir
         </div>
         <!-- Copyright -->
     </footer>
